# ro-crate-validate

./: README.md  pyproject.toml
doc/: TODO.md
ro_crate_validate/: exceptions.py  ro_crate_validate.py
tests/: conftest.py  test_basic_json.py
tests/fixtures/: ro-crate-metadata.json
tests/fixtures/malformed/: ro-crate-metadata.json
